Trying to fix the full bleed image on mobile

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -143,6 +143,13 @@ figcaption::before {
         grid-column: 1 / span 6;
         margin-left: 0px;
     }  
+    .full-bleed img {
+        max-width: 100vw;
+        margin: auto;
+        grid-column: 1 / span 6;
+        position: relative;
+        max-height: 70vh;
+    }
 }
 
 @media (min-width: 300px) {
@@ -162,6 +169,13 @@ figcaption::before {
         grid-column: 1 / span 6;
         margin-left: 0px;
     }  
+    .full-bleed img {
+        max-width: 100vw;
+        margin: auto;
+        grid-column: 1 / span 6;
+        position: relative;
+        max-height: 70vh;
+    }
 }
 
 @media (min-width: 500px) {
@@ -183,6 +197,13 @@ figcaption::before {
     .sticky {
         position: relative;
     }  
+    .full-bleed img {
+        max-width: 100vw;
+        margin: auto;
+        grid-column: 1 / span 6;
+        position: relative;
+        max-height: 70vh;
+    }
 }
 
 @media (min-width: 600px) {
@@ -276,10 +297,7 @@ body {
 h1, h2 {
     font-size: var(--small);
     font-weight: 800;
-}
-
-figcaption {
-
+    margin-bottom: var(--indent);
 }
 
 /* ----------Post its---------- */
@@ -338,7 +356,6 @@ figcaption {
 .pagination {
     /* background-color: red; */
     /* border-top: 1px solid black; */
-
 }
 .pagination p {
     font-size: var(--tiny);
